# GeneratePermutation

./: CMakeLists.txt  README.md
include/: Ascending.hpp  Descending.hpp  Dictionary.hpp  Permutation.hpp  SJT.hpp
src/: Ascending.cpp  Descending.cpp  Dictionary.cpp  Permutation.cpp  SJT.cpp  main.cpp
